# openImpala

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.amrvis  GNUmakefile  GNUmakefile.iridis  README.md  Singularity.def  build.sh  index.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-deps.yaml  build-test.yml  release.yml
containers/: Dockerfile  Singularity.def  Singularity.deps.def
data/: SampleData_2Phase.h5  SampleData_2Phase.raw  SampleData_2Phase.tif  SampleData_2Phase_3d.hdf5  SampleData_2Phase_3d.xmf  SampleData_2Phase_squared.tif  SampleData_2Phase_stack_3d_1bit.tif  SampleData_2Phase_stack_3d_uint8.raw  SampleData_3Phase.tif  SampleData_Threshold_H  create_sample_structure.py  crop-wf.yaml  example.txt  spheres.tif
data/SampleData_2PhaseTiffStack/: SampleData_2Phase0000.tif  SampleData_2Phase0001.tif  SampleData_2Phase0002.tif  SampleData_2Phase0003.tif  SampleData_2Phase0004.tif  SampleData_2Phase0005.tif  SampleData_2Phase0006.tif  SampleData_2Phase0007.tif  SampleData_2Phase0008.tif  SampleData_2Phase0009.tif  SampleData_2Phase0010.tif  SampleData_2Phase0011.tif  SampleData_2Phase0012.tif  SampleData_2Phase0013.tif  SampleData_2Phase0014.tif  SampleData_2Phase0015.tif  SampleData_2Phase0016.tif  SampleData_2Phase0017.tif  SampleData_2Phase0018.tif  SampleData_2Phase0019.tif  SampleData_2Phase0020.tif  SampleData_2Phase0021.tif  SampleData_2Phase0022.tif  SampleData_2Phase0023.tif  SampleData_2Phase0024.tif  SampleData_2Phase0025.tif  SampleData_2Phase0026.tif  SampleData_2Phase0027.tif  SampleData_2Phase0028.tif  SampleData_2Phase0029.tif  SampleData_2Phase0030.tif  SampleData_2Phase0031.tif  SampleData_2Phase0032.tif  SampleData_2Phase0033.tif  SampleData_2Phase0034.tif  SampleData_2Phase0035.tif  SampleData_2Phase0036.tif  SampleData_2Phase0037.tif  SampleData_2Phase0038.tif  SampleData_2Phase0039.tif  (+60 more)
src/filter/: BoxCrop.H  BoxCrop.cpp  CMakeLists.txt  Filter.H  Threshold.H  Threshold.cpp  tBoxCrop.cpp
src/io/: CathodeWrite.H  CathodeWrite.cpp  DatReader.H  DatReader.cpp  HDF5Reader.H  HDF5Reader.cpp  RawReader.H  RawReader.cpp  TiffReader.H  TiffReader.cpp  TiffStackReader.H  TiffStackReader.cpp  brokentDatReader.cpp  hdf5Reader.H  hdf5Reader.cpp  tDatReader.cpp  tHDF5Reader.cpp  tRawReader.cpp  tTiffReader.cpp  tTiffStackReader.cpp
src/props/: CMakeLists.txt  Diffusion.cpp  DiffusionBatch.cpp  EffDiffFillMtx.F90  EffDiffFillMtx_F.H  EffectiveDiffusivityHypre.H  EffectiveDiffusivityHypre.cpp  REVCalculator.cpp  Tortuosity.H  TortuosityDirect.H  TortuosityDirect.cpp  TortuosityHypre.H  TortuosityHypre.cpp  TortuosityHypreFill.F90  TortuosityHypreFill_F.H  Tortuosity_filcc.F90  Tortuosity_filcc_F.H  Tortuosity_poisson_3d.F90  Tortuosity_poisson_3d_F.H  VolumeFraction.H  VolumeFraction.cpp  hypre_test.cpp  tEffectiveDiffusivity.cpp  tTortuosity.cpp  tVolumeFraction.cpp
src/python/: CMakeLists.txt  README.md  pyoimp.cpp  testInitialize.py  testThreshold.py
tests/inputs/: tEffectiveDiffusivity.inputs  tHDF5Reader.inputs  tRawReader.inputs  tTortuosity.inputs  tVolumeFraction.inputs
